compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/RedundantProjectionKind.kt
package test

public open class RedundantProjectionKind {
    public open fun foo(list: List<Number>) {
        throw UnsupportedOperationException()
    }
}
